--- a/Mobile.htm
+++ b/Mobile.htm
@@ -59,7 +59,7 @@ function myFunction() {
 
 
 
-   <footer><blockquote> <span class="credits"> - Created by <a href="" class="name">Meet kasediya</a></span></blockquote>
+   <footer><blockquote> <span class="credits"> - Created by <a href="https://github.com/Meet-kasediya" class="name">Meet kasediya</a></span></blockquote>
  </footer>
 
 
